# audira

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: audio.rs  icons.rs  main.rs  metadata.rs  playlist.rs  theme.rs  ui.rs  waveform.rs
wix/: License.rtf  main.wxs
